
    Checks & Agents:
    * 0435 FIX: esx_vsphere_sensors: Fix garbled output in case of placeholder VMs...

    Multisite:
    * 0246 FIX: brocade_fcport: fixed error in pnp-template...
    * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
    * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...

    WATO:
    * 0392 FIX: LDAP: Improved error messages of LDAP configuration test...
    * 0415 FIX: LDAP: The LDAP Settings dialog is now disabled when the LDAP Connector is disabled


1.2.4b1:
    Core & Setup:
    * 0386 Added all active checks to check_mk -L output...
    * 0087 FIX: Fixed possible locking issue when using datasource program with long output...
    * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...
    * 0379 FIX: check_mk -c: Now also rewrites the location of conf.d directory
    * 0354 FIX: Catch exception when check plugins do not return a state...
    * 0398 FIX: Tolerate debug output in check plugins when using CMC...

    Checks & Agents:
    * 0306 esx_vsphere_counters: added missing ramdisk levels sfcbtickets
    * 0073 moxa_iologik_register: new check to monitor moxa e2000 series registers
    * 0105 apc_humidity: New Check for humidity levels on APC Devices
    * 0106 3ware_units: The verifying state is now handled as ok...
    * 0086 timemachine: new check checking the age of latest backup by timemachine on MAC OS
    * 0074 raritan_pdu_plugs: new check for Raritan PX-2000 family PDUs...
    * 0107 stulz_alerts, stulz_powerstate, stulz_temp, stulz_humidity: New Checks for Stulz clima devices
    * 0075 raritan_pdu_inlet: new check to monitor inlet sensors of the Raritan PX-2000 PDUs
    * 0315 hitachi_hnas_quorumdevice, hitachi_hnas_pnode, hitachi_hnas_vnode: New checks for Hitachi HNAS devices
    * 0373 wut_webtherm: Supporting several other devices now
    * 0377 check_http: Certificate Age mode now supports SNI...