@@ -9,6 +9,7 @@
     * 0246 FIX: brocade_fcport: fixed error in pnp-template...
     * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
     * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
+    * 0436 FIX: Fix broken Site status switching via sidebar snapin...
 
     WATO:
     * 0392 FIX: LDAP: Improved error messages of LDAP configuration test...
